[package]
name = "turnstile-actix-web"
version = "0.1.0"
edition = "2021"

authors = [ "Leaf48" ]
description = "Cloudflare Turnstile Middleware for Actix Web"
repository = "https://github.com/Leaf48/Turnstile-Rust"
keywords = [ "captcha", "cloudflare", "turnstile", "actix-web", "middleware" ]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
once_cell = "1.21.3"
thiserror = "2.0.12"
